# konne88.github.io

./: .gitmodules  CNAME  _config.yml  index.html  index.md  keybase.txt  params.json
_posts/: 2014-09-29-correspondences.md  2015-02-04-data-abstraction-0.md  2015-08-17-paradoxes.md  2015-09-25-diagrams.md  2016-08-10-coq-adts.md  2016-09-26-hottsql.md  Correspondences.v
assets/bibtex/: netpl-16.bib  tsfs-demo.bib  tsfs.bib
assets/posts/coq-adts/: CoqADT.v  add.cabal  markdownify.sh  stack.yaml
assets/posts/coq-adts/src/: Main.hs
assets/posts/data-abstraction/: data-abstraction.hs  data-abstraction.java  data-abstraction.v
assets/project-icons/: bagpipe.xcf
papers/: ocean.bib
projects/: cf.xcf  ep.xcf  kvm.xcf
theme/_layouts/: main.html
theme/css/: main.css
theme/js/: main.js
