name:           add
version:        1.0
cabal-version:  >=1.10
build-type:     Simple

executable add
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Add
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, 
                       ghc-prim
  default-language:    Haskell2010

